--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,18 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js",
-      "init-db": "node init-db.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js",
+        "init-db": "node init-db.js"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "firebase-admin": "^12.0.0"
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "firebase-admin": "^12.0.0",
+        "quickquery-server": "file:"
     },
     "devDependencies": {
-      "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1"
     }
-  }
+}
